--- a/clasificacion.html
+++ b/clasificacion.html
@@ -46,10 +46,10 @@
  	<tr>
     <td class="headcol">Ale</td>
     <td>09</td>
-    <td>08</td>
+    <td>09</td>
     <td>3</td>
     <td>0</td>
-    <td>5</td>
+    <td>6</td>
     <td>10</td>
     <td>0</td>
      </tr>
@@ -106,13 +106,13 @@
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
-    <td>20</td>
-    <td>13</td>
-    <td>6</td>
+    <td>23</td>
+    <td>14</td>
+    <td>7</td>
     <td>2</td>
     <td>5</td>
     <td>02</td>
-    <td>3</td>
+    <td>4</td>
      </tr>
        <tr>
     <td>Gianni</td>
@@ -147,12 +147,12 @@
      </tr>
       <tr>
     <td>Jose</td>
-    <td>19</td>
-    <td>16</td>
-    <td>6</td>
+    <td>22</td>
+    <td>17</td>
+    <td>7</td>
     <td>1</td>
     <td>9</td>
-    <td>48</td>
+    <td>53</td>
     <td>0</td>
      </tr>
    
@@ -166,17 +166,7 @@
     <td>0</td>
     <td>0</td>
      </tr>
-      <tr>
-    <td>Magic</td>
-    <td>11</td>
-    <td>11</td>
-    <td>3</td>
-    <td>2</td>
-    <td>6</td>
-    <td>21</td>
-    <td>0</td>
-     </tr>
-        <tr>
+          <tr>
     <td>Lean</td>
     <td>03</td>
     <td>03</td>
@@ -186,6 +176,18 @@
     <td>05</td>
     <td>0</td>
      </tr>
+
+      <tr>
+    <td>Magic</td>
+    <td>11</td>
+    <td>12</td>
+    <td>3</td>
+    <td>2</td>
+    <td>7</td>
+    <td>21</td>
+    <td>0</td>
+     </tr>
+   
       <tr>
     <td>Mapache</td>
     <td>07</td>
@@ -200,11 +202,11 @@
        <tr>
     <td>Marcos</td>
     <td>10</td>
-    <td>04</td>
+    <td>05</td>
     <td>3</td>
     <td>1</td>
-    <td>0</td>
-    <td>09</td>
+    <td>1</td>
+    <td></td>
     <td>0</td>
      </tr>
        <tr>
@@ -241,51 +243,51 @@
        <tr>
     <td>Santi</td>
     <td>07</td>
-    <td>06</td>
+    <td>07</td>
     <td>2</td>
     <td>1</td>
-    <td>3</td>
+    <td>4</td>
     <td>07</td>
     <td>1</td>
      </tr>
         <tr>
     <td class="headcol">SBM</td>
     <td>13</td>
-    <td>12</td>
+    <td>13</td>
     <td>4</td>
     <td>1</td>
-    <td>7</td>
+    <td>8</td>
     <td>69</td>
     <td>1</td>
      </tr>
       <tr>
     <td>Smoke</td>
-    <td>09</td>
-    <td>05</td>
-    <td>3</td>
+    <td>12</td>
+    <td>06</td>
+    <td>4</td>
     <td>0</td>
     <td>2</td>
-    <td>12</td>
+    <td>13</td>
     <td>0</td>
      </tr>
        <tr>
     <td>Vale</td>
-    <td>16</td>
-    <td>12</td>
-    <td>5</td>
+    <td>19</td>
+    <td>13</td>
+    <td>6</td>
     <td>1</td>
     <td>6</td>
-    <td>06</td>
+    <td>07</td>
     <td>0</td>
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>20</td>
-    <td>14</td>
-    <td>6</td>
+    <td>23</td>
+    <td>15</td>
+    <td>7</td>
     <td>2</td>
     <td>6</td>
-    <td>23</td>
+    <td>24</td>
     <td>2</td>
      </tr>
        <tr>
@@ -301,11 +303,11 @@
      <tr>
     <td>Wallace</td>
     <td>22</td>
-    <td>12</td>
+    <td>13</td>
     <td>7</td>
     <td>1</td>
-    <td>4</td>
-    <td>50</td>
+    <td>5</td>
+    <td>52</td>
     <td>1</td>
      </tr>
        <tr>
@@ -343,6 +345,7 @@
 <option value="Sixteen">16° Jornada</option>
 <option value="Seventeen">17° Jornada</option>
 <option value="Eighteen">18° Jornada</option>
+<option value="Nineteen">Ultima Jornada</option>
 
 
 
@@ -671,6 +674,25 @@
 <p>Jose(4) Mapa(0) Miche(8) Vale(0) Smoke(3) | 15</p>   
 <p>-----------------------------------------------</p>
 <p>Gabo(0) SBM(8) Ale(2) Vega(3) Vampi(1) | 14</p>       
+        </div>
+      </div>
+  </div>
+</div>
+</div>
+<div id="showNineteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/19Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardGaboMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Gabo.</h4>
+        <p>Viernes 30/12/22| 19:00| bodega </p>
+      <p><br></p> 
+<p>Jose(5) Gabo(0) Vampi(1) Vale(1) Smoke(1) Shalei(1) | 9</p>   
+<p>-----------------------------------------------</p>
+<p>Wallace(2) SBM(0) Santi(0) Marcos(2) Magic(0) Ale(0)| 4</p>       
         </div>
       </div>
   </div>
