--- a/jose.html
+++ b/jose.html
@@ -37,7 +37,7 @@
 
     </div>
     <h1>LOGROS</h1>
-    <h2>Logros adquiridos 0/16</h2>
+    <h2>Logros adquiridos 1/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -102,7 +102,7 @@
  <p>14/16</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/piquela1.png">
  <p>15/16</p>
     </div>
      <div class="logro4">
