--- a/vega.html
+++ b/vega.html
@@ -89,7 +89,7 @@
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/mvp.png">
+<img src="imagenes/logros/mvp1.png">
      <p>12/16</p>
     </div>
 </div>
