--- a/destacados1.html
+++ b/destacados1.html
@@ -7,12 +7,11 @@
 	<link rel="icon" href="imagenes/icono.ico">
 	<title>	La Pelota No Se Mancha</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link rel="stylesheet" type="text/css" href="css/estilosRanked.css">
-     <link rel="stylesheet" type="text/css" href="css/estilosRanking.css">
+    <link rel="stylesheet" type="text/css" href="css/estilosJugador.css">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    	<nav>
+   <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
@@ -22,23 +21,18 @@
         </a>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="clasificacion.html">Clasificacion</a></li>
-            <li><a href="jugadores.html">Jugadores</a></li>
-            <li><a class="active" href="ranked.html">Ranked</a></li>           
+            <li><a class="active" href="clasificacion.html">Clasificacion</a></li>
+            <li><a  href="jugadores.html">Jugadores</a></li>
+            <li><a href="ranked.html">Ranked</a></li>
+           
         </ul>
     </nav>
-    <div class="rankedLore">
-        <img src="imagenes/ranked/rankedLore2.png">         
-       </div>
-       <div class="rankedDivisions">
-        <img src="imagenes/ranked/rankedDivisions.png">
-         
-       </div>
-       <h1 style="color: orange;">Ranking 2° Temporada</h1>
-      <button class="button" role="button" onclick="location.href='ranking2.html'">Ver Ranking T2 </button>
-       <h1 style="color: #c1c4c8;">Ranking 1° Temporada</h1>
-      <button class="button2" role="button" onclick="location.href='ranking.html'">Ver Ranking T1 </button>
-       <footer>
+    <h1>Lo Mejor De la 1° Temporada</h1>
+       <h2>Volve flaco aca solo estan los mejores del año que haces vos aca??</h2>
+       <h2>Solo los buenos pueden ver esta parte maestro volate</h2>
+      <h2>Na mentira! Estamos trabajando en esta sección vuelva mas adelante</h2>
+ 
+   <footer>
          <p> Todos los derechos reservados &copy; 2025 | Gabriel Reggiardo | </p>
 </footer>
 </body>
