--- a/destacados1.html
+++ b/destacados1.html
@@ -8,6 +8,7 @@
 	<title>	La Pelota No Se Mancha</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link rel="stylesheet" type="text/css" href="css/estilosJugador.css">
+    <link rel="stylesheet" type="text/css" href="css/estilosRanked.css">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -28,9 +29,28 @@
         </ul>
     </nav>
     <h1>Lo Mejor De la 1° Temporada</h1>
-       <h2>Volve flaco aca solo estan los mejores del año que haces vos aca??</h2>
-       <h2>Solo los buenos pueden ver esta parte maestro volate</h2>
-      <h2>Na mentira! Estamos trabajando en esta sección vuelva mas adelante</h2>
+    <h2  style="color: white;">GOLEADORES DEL AÑO</h2>
+      <div class="destacados">
+        <img src="imagenes/destacados/goleadores.png">
+          <h2 style="color: white;">MAS GOLES X PARTIDO EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/golesxpartido.png">
+          <h2 style="color: white;">MAS PUNTOS EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/puntos.png">
+          <h2 style="color: white;">PROMEDIO DE PUNTOS OBTENIDOS EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/puntosxpartido.png">
+          <h2 style="color: white;">MAS VECES MVP EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/mvps.png">
+          <h2 style="color: white;">MEJORES EN RANKED EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/ranked.png">
+          <h2 style="color: white;">MAS PARTIDOS JUGADOS EN EL AÑO</h2>
+           <div class="destacados">
+        <img src="imagenes/destacados/partidos.png">
+  
  
    <footer>
          <p> Todos los derechos reservados &copy; 2025 | Gabriel Reggiardo | </p>
